# plant_disease_classifier

./: .gitignore  README.md  prepare_data.py  pyproject.toml  render.yaml  streamlit_app.py
api/: inference.py  main.py
notebooks/: train.ipynb
src/plant_disease_classifier/: config.py
