[tool.poetry]
name = "plant-disease-classifier"
version = "0.1.0"
description = "A FastAPI image classifier for tomato leaf diseases"
authors = ["Jesse Montgomery <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "plant_disease_classifier", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110.0"
pillow = "^10.2.0"
plotly = "^5.20.0"
scikit-learn = "^1.4.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
nbformat = "^5.10.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"